--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +10,9 @@
         android:id="@+id/text_view_answers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Here must to be the some text" />
+        android:text="Here must to be the some text"
+        android:scrollbars="vertical"
+        android:layout_margin="7dp"
+        android:padding="7dp"/>
 
 </LinearLayout>
