--- a/app/src/main/res/layout/album_layout.xml
+++ b/app/src/main/res/layout/album_layout.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="12dp"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="5dp">
 
     <TextView
-        android:id="@+id/album_title"
+        android:id="@+id/answer_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:gravity="center"
         android:padding="8dp"
-        android:text="Image 1"
-        android:textSize="18dp"
+        android:textSize="12dp"
         android:textStyle="bold" />
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
