--- a/app/src/main/res/values/answers.xml
+++ b/app/src/main/res/values/answers.xml
@@ -1075,7 +1075,52 @@ HOLAP использует реляционные таблицы для хран
 •	Исследование и взвешивание факторов, влияющих на результат. Например, поиск факторов, побуждающих клиентов совершить повторное посещение магазина.\n
 •	Классификация документов, электронной почты и других объектов, имеющих множество атрибутов.\n
 </item>
- <!--14--><item>Уругвай</item>
+ <!--14--><item>14.	ПРОЦЕССЫ ЖИЗНЕННОГО ЦИКЛА ПРОГРАММНЫХ СРЕДСТВ.\n\n\n\n\n
+1.Основные процессы жизненного цикла.\n
+1.1.Процесс заказа.\n
+Процесс заказа определяет работы и задачи заказчика. Процесс заказа состоит из определения потребностей заказчика в системе, программном продукте или программной услуге, подготовки и выпуска заявки на подряд, выбора поставщика и управления процессом заказа до завершения приемки системы, программного продукта или программной услуги.\n
+1.2.Процесс поставки.\n
+Процесс поставки определяет работы и задачи поставщика. Процесс поставки начинается с решения о подготовке предложения в ответ на заявку на подряд, присланную заказчиком, или с подписания договора с заказчиком на поставку системы, ПП или программной услуги. Затем определяются процедуры и ресурсы, необходимые для управления и обеспечения проекта, включая разработку проектных планов и их выполнение.\n
+1.3.Процесс разработки.\n
+Процесс разработки определяет работы и задачи разработчика. Данный процесс включает работы по анализу требований, проектированию, программированию, сборке, тестированию, вводу в действие и приемке программного продукта или системы.\n
+1.4.Процесс эксплуатации.\n
+Процесс эксплуатации определяет работы и задачи оператора. Данный процесс включает эксплуатацию программного продукта и поддержку пользователей в процессе эксплуатации.\n
+1.5.Процесс сопровождения.\n
+Процесс сопровождения определяет работы и задачи персонала сопровождения и реализуется при модификациях программного продукта. Цель процесса – изменение существующего ПП при сохранении его целостности. Процесс охватывает вопросы переносимости и снятия ПП с эксплуатации.\n\n
+2.Вспомогательные процессы жизненного цикла.\n
+2.1	Процесс документирования.\n
+Процесс документирования является процессом формализованного описания информации, созданной в процессе или работе жизненного цикла. Он включает планирование, проектирование, разработку, выпуск, редактирование, распространение и сопровождение документов по программному продукту.\n
+2.2 Процесс управления конфигурацией.\n
+Процесс управления конфигурацией является процессом применения административных и технических процедур на всем протяжении ЖЦ ПС для определения состояния (базовой линии) программных объектов в системе, управления их изменениями и выпуском.\n
+2.3	Процесс обеспечения качества\n
+Процесс обеспечения качества является процессом обеспечения гарантий того, что программные продукты и процессы в жизненном цикле проекта соответствуют требованиям и планам. Данный процесс должен быть независимым от субъектов, участвующих в проекте. Это позволяет достичь объективности процесса. При обеспечении качества могут использоваться результаты процессов верификации, аттестации, совместного анализа, аудита и решения проблем\n
+2.4	Процесс верификации.\n
+Процесс верификации является процессом определения того, что программные продукты функционируют в полном соответствии с требованиями и условиями, реализованными в предшествующих работах.\n
+Данное определение является не совсем понятным для лиц, некомпетентных в области верификации. Кроме того, оно сужает применимость верификации только до программных продуктов. Для пояснения данного определения следует рассмотреть само понятие верификации. Термин верификация (verification) обозначает подтверждение с помощью экспертизы и представления объективных доказательств того, что конкретные требования полностью реализованы. В процессе разработки верификация связана с экспертизой результатов данной работы с целью определения их соответствия установленным на входе данной работы требованиям. Таким образом, верификация может применяться не только к программным продуктам, но и к любым другим результатам работы. Например, верификации могут подвергаться требования, системная и программная архитектура, документация, методы, планы и т.п.\n
+В этой связи более понятным и близким к истине является следующее определение процесса верификации. Процесс верификации – это процесс определения того, что результаты работы соответствуют требованиям или условиям, установленным на входе данной работы.\n
+Процесс верификации может включать анализ, проверку и тестирование.\n
+Объектами анализа и проверки могут являться, например, документация и исходные тексты программных модулей. Объектами тестирования могут являться исполнимые коды программных модулей, компонентов, промежуточных и конечного программных продуктов.\n
+Данный процесс называется процессом независимой верификации, если организация–исполнитель не зависит от поставщика, разработчика, оператора или персонала сопровождения.\n
+2.5	Процесс аттестации и его структура.\n
+Процесс аттестации является процессом определения полноты соответствия установленных требований, созданной системы или программного продукта их функциональному назначению. Чтобы пояснить это определение, следует рассмотреть понятие аттестации.\n
+Термин аттестация (validation) обозначает подтверждение экспертизой и представлением объективных доказательств того, что конкретные требования к конкретным объектам полностью реализованы. В процессе разработки аттестация связана с экспертизой продукта в целях определения его соответствия потребностям пользователя (то есть исходным требованиям к проекту).\n
+Аттестации (проверке на соответствие исходным требованиям) могут подвергаться любые промежуточные продукты процесса разработки. Аттестация может проводиться на начальных этапах работы и как часть работы по обеспечению приемки ПС.\n
+Данный процесс называется процессом независимой аттестации, если организация–исполнитель не зависит от поставщика, разработчика, оператора или персонала сопровождения.\n
+2.6	Процесс совместного анализа.\n
+Процесс совместного анализа является процессом оценки состояний и результатов работ по проекту. Совместные анализы проводятся в течение всего договора и применяются как на уровне управления проектом, так и на уровне его технической реализации. Данный процесс может выполняться двумя любыми сторонами, участвующими в договоре, когда одна сторона (анализирующая) проверяет другую (анализируемую).\n
+2.7	Процесс аудита.\n
+Процесс аудита является процессом определения соответствия требованиям, планам и условиям договора. Данный процесс может выполняться двумя сторонами, участвующими в договоре, когда одна сторона (ревизующая) проверяет другую сторону (ревизуемую).\n
+2.8	Процесс решения проблем.\n
+Процесс решения проблем является процессом анализа и решения проблем (включая обнаруженные несоответствия), которые обнаружены в ходе выполнения разработки, эксплуатации, сопровождения или других процессов.\n\n
+3. Организационные процессы жизненного цикла.\n
+3.1 Процесс управления.\n
+Процесс управления состоит из общих работ и задач, которые могут быть использованы любой стороной, управляющей соответствующим процессом. За управление продуктом, проектом, работами и задачами основных и вспомогательных процессов отвечает администратор.\n
+3.2 Процесс создания инфраструктуры\n
+Процесс создания инфраструктуры является процессом установления и сопровождения инфраструктуры, необходимой для любого другого процесса. Инфраструктура содержит технические и программные средства, инструментальные средства, методики, стандарты и условия для разработки, эксплуатации или сопровождения.\n
+3.3 Процесс обучения\n
+Процесс обучения является процессом обеспечения первоначального и продолженного обучения персонала работам по заказу, поставке, разработке, эксплуатации или сопровождению программного проекта.\n
+3.4 Процесс усовершенствования\n
+Процесс усовершенствования является процессом установления, оценки, измерения, контроля и улучшения любого процесса жизненного цикла программных средств.\n</item>
  <!--15--><item>15.ПРОЕКТИРОВАНИЕ ПРОГРАММНЫХ СРЕДСТВ.\n\n\n\n\n
 Проектирование программного обеспечения — процесс создания проекта программного обеспечения (ПО), а также дисциплина, изучающая методы проектирования. Проектирование ПО является частным случаем проектирования продуктов и процессов.\n
 Целью проектирования является определение внутренних свойств системы и детализации её внешних (видимых) свойств на основе выданных заказчиком требований к ПО (исходные условия задачи). Эти требования подвергаются анализу.\n
