--- a/app/src/main/res/values/answers.xml
+++ b/app/src/main/res/values/answers.xml
@@ -1992,10 +1992,48 @@ PHP поддерживает три типа комментариев: в сти
 </item>
  <!--31--><item>Уругвай</item>
  <!--32--><item>Уругвай</item>
- <!--33--><item>Уругвай</item>
+ <!--33--><item>33.СИСТЕМНЫЕ ПЕРЕМЕННЫЕ MATLAB.\n\n\n\n\n
+Системные переменные MATLAB\n
+В системе MATLAB существует особой вид переменных, значение которых, за исключением переменой ans, нельзя изменить. Эти переменные называются системными. Они предназначены для более эффективной работы при вычислениях, а также для вывода системой сообщений при некорректной постановке задачи пользователем. В таблице приведен список системных переменных, используемых в MATLAB.\n\n
+Обозначения системных переменных MATLAB\n
+Переменная	Значение переменной\n
+i, j	мнимая единица ( )\n
+pi	число (3.14159265)\n
+eps	погрешность для операций над числами с плавающей точкой (по умолчанию -52)\n
+realmin	минимальное значение вещественного числа (2-1022)\n
+realmax	Максимальное значение вещественного числа (21023)\n
+inf	бесконечность ()\n
+naN	неопределенность, например, 0/0)\n
+ans	переменная, хранящая результат последней операции\n
+</item>
  <!--34--><item>Уругвай</item>
  <!--35--><item>Уругвай</item>
- <!--36--><item>Уругвай</item>
+ <!--36--><item>36.ПРИНЦИПЫ УПРАВЛЕНИЯ ПРОЕКТОМ.\n\n\n\n\n\n
+Три фундаментальных принципа проектного управления.\n\n
+Первый принцип проектного управления. Принцип яйца.\n
+Как ответ на эти два вызова - конечность и неопределенность, родилось проектное управление. Появился принцип яйца. Это, конечно, метафора. Но она отражает то, как менеджеры отреагировали на конечность и неопределенность.\n
+ Что символизирует куриное яйцо? Представьте, курица снесла яйцо и садится его высиживать. Яйцо сразу конечного размера, то есть скорлупа уже больше не увеличивается. И скорлупа – это аналог того, что называется «устав проекта». В каждом проекте обязательно есть такая вещь, как устав. В уставе фиксируются неизменные ограничения проекта - стоимость, сроки и кратко его суть (содержание). И сколько бы курица ни сидела, яйцо больше не растёт. Это жесткие рамки, в которые проект должен уложиться, и мы обязаны уложить его в эти рамки любой ценой.\n
+Под скорлупой яйца находится внутреннее содержимое. Но пока это только общие планы. Когда курица садится на яйцо, там есть белок и желток - размытые субстанции, а птица еще не угадывается. Так и на старте проекта пишется устав, а подробных планов нет. Они создаются очень примерно. То есть вы должны представить себе общую картину, а уточнять будете позже, чтобы не тратить каждый раз время на переписывание и уточнение. И чем дальше продвигается проект вперёд, чем дольше курица высиживает яйцо, тем явственнее проступают лапки, клювик, глазки и вообще наша будущая птица. Так и с проектом. Сначала планы примерные, а чем дольше он длится, тем больше уточнений вы вносите, и в этом заключается принцип яйца.\n
+ То есть на старте есть устав и примерные планы (белок и желток). На протяжении проекта устав неизменен, а планы меняются, расширяются. Это очень важное правило – скорлупу трогать нельзя. Если вы расковыряли пальцем скорлупу яйца, то результат у вас уже не получится, высидеть яйцо будет невозможно. Точно так же и с проектом: если вы устав нарушили, этот проект надо перезапускать. Если яйцо сначала высиживала курица, а потом вы решили, что это должен делать крокодил, то придется брать уже другое яйцо.\n
+ Задача менеджера проекта – обеспечить, чтобы внутреннее содержимое не переросло ограничения, чтобы белок и желток не стали больше самого яйца. Если скорлупа лопнет, проект тоже не получится. И PMBoK – это пособие о том, как впихнуть то, что не вмещается, как яйцо удержать в скорлупе.\n
+ Попробуйте ответить, можно ли назвать успешным проект, если сроки были превышены в 50 раз, а бюджет – в 40 раз, но продукт получился хорошим? Речь идет, в частности, о продуктах Microsoft – Word и Excel – очень популярных, очень хороших продуктах. Являются ли они успешными проектами?\n
+ На самом деле это провальные проекты, но все довольны. И надо эти две вещи разделять и не путаться: это очень хорошие продукты, которыми все довольны, но провальные проекты. Почему это не просто придирки? Если бы это была не Microsoft, а совершенно другая компания, то:\n
+•	проект никогда бы не завершился,\n
+•	компания разорилась бы.\n
+ По сути, эти проекты не обладали конечностью. Руководству на самом деле было все равно, сколько денег уйдет на проекты и когда они выйдут. Главное – чтобы продукты вышли и покорили рынок.\n
+ И таких компаний немало, тот же Яндекс или Google. Они не очень переживают, сколько будет стоить их новый сервис или обновление. Их не очень интересуют сроки. Для них важно, чтобы получился очень хороший продукт.\n
+ Когда у вас такая ситуация – скрам работает прекрасно, ничего лучше не бывает. Если у вас бесконечное число денег и времени, и вам просто нужен хороший продукт, то ничего лучше, чем спокойненько делать и все время показывать клиенту промежуточные результаты, никто не придумал. Но если вы работаете в боевых рыночных условиях, если у вас бюджет ограничен, и хороший продукт – не единственное, что вас волнует, то для этого есть проектное управление.\n\n
+Второй принцип. Принцип удава.\n
+ Любой проект имеет жизненный цикл. Он начинается с инициации (этап определения границ и формального запуска проекта) и заканчивается закрытием (этап формального завершения работ), а в середине у него клубок процессов. Абсолютно у каждого проекта, даже если вы его не закончили, провалили, есть начало, конец и середина: инициация, закрытие и клубок процессов. Если на этот цикл натянуть смешной контур, то получится удав. Такой сытый удав, который что-то переваривает.\n\n
+Третий принцип. Принцип командности и проактивности.\n
+Как вы считаете, должен ли быть менеджер проекта экспертом в том, в чем у него проект, должен ли он разбираться в этом?\n
+С одной стороны, должен, иначе его просто обманут. Но с другой, менеджеру проекта не просто быть экспертом, потому что непонятно, где именно должна находиться зона его экспертизы. Вот конкретный пример. Представьте себе проект по разработке томографа. Давайте попробуем разобраться, какими должны быть компетенции менеджера этого проекта. Томограф - сложный прибор со сложным софтом, над ним трудится инженер-электронщик, с одной стороны, программист – с  другой. Проектирование с последующей сборкой - примерно столь же трудоемкая задача, как и написание для томографа программного обеспечения. При этом томограф делается для врачей, поэтому необходимо участие врача, для уточнения, что имеет диагностическую ценность, а что - нет. А еще томограф – прибор, который проходит строгую сертификацию, потому что при неправильном применении он может человека убить. И процедура его сертификации длительная и сложная, требует участия отдельных компетентных специалистов. И в какой из упомянутых сфер должен быть экспертом менеджер проекта? Понятно, что он не может быть одновременно и электронщиком, и программистом, и врачом, и специалистом по сертификации.\n
+ Это универсальная ситуация: проекты – всегда задачи с конечностью и неопределенностью, когда стыкуются разные сферы и нужны разные специалисты. Поэтому менеджеру проекта не обязательно быть экспертом, потому что непонятно, в какой это должно быть области.\n
+ Другая ситуация, когда мы смотрим на работу какого-либо отдела. Обычно начальники отделов – это бывшие эксперты. Сначала он был простым инженером, потом дорос до начальника отдела инженеров. Он самый умный инженер, поэтому его назначили всеми руководить. Начальники отделов, конечно, не всегда вырастают из рядовых сотрудников, но чаще всего ситуация именно такая. Но здесь вряд ли речь пойдет именно об управлении проектами. Если у вас вдруг проект внутри отдела, и в него вовлечены только сотрудники отдела, это наверняка не проект. Это просто задачи в рамках вашей операционной деятельности. Проект предполагает конечность и неопределенность. А откуда возьмется неопределенность, если ваши люди делают дело, которое и вы, и они хорошо знают? Проекты, как правило, предполагают кросс-функциональность. Это верно даже для тех IT-проектов, в которых команды маленькие. Все равно в них есть программисты, тестировщики, аналитики, дизайнеры, люди других профессий. Во всех этих сферах нельзя быть экспертом, поэтому менеджер не может быть экспертом во всем. Конечно, грамотность нужна, понимание предмета проекта, например, в нашем последнем примере знать что-то про томограф обязательно. Иначе команда вас не примет как руководителя. Но быть экспертом во всем невозможно.\n
+ И отсюда берется принцип командности. Очень простая логика: проектное управление не предполагает, что вы, как руководитель, можете взять и сделать проект самостоятельно. Понадобятся знания большого количества экспертов в разных доменах, которые вам нужно объединить. Вы – интегратор в первую очередь. Принцип командности говорит о том, что вся команда участвует в формировании планов. Планы пишутся всей командой – вами и вашими сотрудниками. Один вы не сможете учесть все нюансы, хотя соблазн самому построить план проекта всегда велик.\n
+ Проактивность – это антоним реактивности. Что такое реактивность? Когда что-то загорелось, побежали – потушили. А проактивность – это мы сидим и думаем, как бы так сделать, чтобы не загорелось никогда, а если загорится, чтобы мы быстро справились. Фактически, проактивность - это управление рисками. Превентивное.\n
+ А управление проектом – это, во-первых, умение увлекать команду формированием планов и управление этими планами. А во-вторых, проактивность – вы должны думать про риски, управлять ими, всячески их оценивать.\n
+</item>
  <!--37--><item>Уругвай</item>
  <!--38--><item>Уругвай</item>
  <!--39--><item>Уругвай</item>
